MAINT: Remove extra trsyl call and add arg checks
TST: Added more tests and corrected function names

DOC: Added refguide exception for solve_lyapunov

DOC: Release notes addition

--- a/doc/release/1.0.0-notes.rst
+++ b/doc/release/1.0.0-notes.rst
@@ -33,6 +33,9 @@ Backwards incompatible changes
 Other changes
 =============
 
+In order to have consistent function names, the function
+`scipy.linalg.solve_lyapunov` is renamed to `scipy.linalg.solve_continuous_lyapunov`.
+The old name is kept for backwards-compatibility.
 
 Authors
 =======
