--- a/THANKS.txt
+++ b/THANKS.txt
@@ -173,6 +173,7 @@ Jonathan T. Siebert for bug fixes.
 Thomas Keck for adding new scipy.stats distributions used in HEP
 David Nicholson for bug fixes in spectral functions.
 Dominic Antonacci for statistics documentation.
+David Hagen for the object-oriented ODE solver interface.
 
 Institutions
 ------------
