MAINT: optimize: Better name for trust-region-exact method.

--- a/THANKS.txt
+++ b/THANKS.txt
@@ -162,7 +162,7 @@ Bill Sacks for fixes to netcdf i/o.
 Kolja Glogowski for a bug fix in scipy.special.
 Surhud More for enhancing scipy.optimize.curve_fit to accept covariant errors
 on data.
-Antonio Ribeiro for implementing irrnotch, iirpeak and trust-region-exact methods
+Antonio H. Ribeiro for implementing irrnotch, iirpeak and trust-exact methods
     and for improvements on BFGS implemetation.
 Ilhan Polat for bug fixes on Riccati solvers.
 Sebastiano Vigna for code in the stats package related to Kendall's tau.
