Add "(added in 1.0.0)" to documentation and also added in version of slug unit.

--- a/THANKS.txt
+++ b/THANKS.txt
@@ -176,6 +176,7 @@ Roman Feldbauer for improvements in scipy.sparse
 Dominic Antonacci for statistics documentation.
 David Hagen for the object-oriented ODE solver interface.
 Arno Onken for contributions to scipy.stats.
+Adam Cox for contributions to scipy.constants.
 
 Institutions
 ------------
