--- a/THANKS.txt
+++ b/THANKS.txt
@@ -176,6 +176,7 @@ Roman Feldbauer for improvements in scipy.sparse
 Dominic Antonacci for statistics documentation.
 David Hagen for the object-oriented ODE solver interface.
 Arno Onken for contributions to scipy.stats.
+Oliver Steele for a bug fix in scipy.io.arff.
 
 Institutions
 ------------
