BUG: endianness fix with non-native dtype param
Fixes an issue analogous to #7388 and #4127 but for the case where output
param is a dtype rather than an ndarray.

--- a/THANKS.txt
+++ b/THANKS.txt
@@ -176,7 +176,7 @@ Roman Feldbauer for improvements in scipy.sparse
 Dominic Antonacci for statistics documentation.
 David Hagen for the object-oriented ODE solver interface.
 Arno Onken for contributions to scipy.stats.
-Cathy Douglass for a bug fix in ndimage.
+Cathy Douglass for bug fixes in ndimage.
 
 Institutions
 ------------
