BUG: make dirichlet.var() output shape consistent with other methods

--- a/doc/release/1.0.0-notes.rst
+++ b/doc/release/1.0.0-notes.rst
@@ -75,6 +75,9 @@ has been changed to True.
 
 `scipy.special.gammaln` does not accept complex arguments anymore.
 
+The method ``var`` for the Dirichlet distribution of `scipy.stats.multivariate`
+now returns a scalar rather than an ndarray when the length of alpha is 1.
+
 
 Other changes
 =============
