ENH: add out parameter to pdist/cdist
To reduce memory usage for repeated calls to pdist/cdist. Includes tests
for currently supported metrics and exceptions for when inappropriate
array is provided by the user.

--- a/THANKS.txt
+++ b/THANKS.txt
@@ -178,6 +178,7 @@ David Hagen for the object-oriented ODE solver interface.
 Arno Onken for contributions to scipy.stats.
 Cathy Douglass for bug fixes in ndimage.
 Adam Cox for contributions to scipy.constants.
+Dezmond Goff for adding optional out parameter to pdist/cdist
 
 Institutions
 ------------
